# moxa-gpio-control

./: .gitignore  .gitlab-ci.yml  API_References.md  Makefile  README.md  configure.ac  mx_gpio.c
debian/: .gitignore  changelog  control  copyright  libmoxa-gpio-control-dev.install  libmoxa-gpio-control-dev.links  libmoxa-gpio-control1.install  libmoxa-gpio-control1.symbols  rules
example/: Makefile  README.md  gpio-test.c
include/: Makefile.am  mx_gpio.h
lib/: Makefile.am  mx_gpio.c
